--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 211,
    "id": "4e203b59",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 212,
    "id": "bc438665",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 213,
    "id": "3ce9c066",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "4     Sequoia Union High     NaN  "
       ]
      },
-     "execution_count": 673,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 214,
    "id": "6f4c939d",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 674,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 215,
    "id": "0990721b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 675,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 216,
    "id": "036bf81e",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "Name: Job Title, Length: 255, dtype: int64"
       ]
      },
-     "execution_count": 676,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 217,
    "id": "bd1db5ec",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 677,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 218,
    "id": "f8cc561b",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "(490, 10)"
       ]
      },
-     "execution_count": 678,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 219,
    "id": "22a429cc",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 679,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 220,
    "id": "8606a9b0",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 221,
    "id": "5d3ce968",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 681,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 222,
    "id": "6c7a3fcc",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 223,
    "id": "811bc630",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "Name: Status, Length: 490, dtype: object"
       ]
      },
-     "execution_count": 683,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 224,
    "id": "06ff3382",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "490"
       ]
      },
-     "execution_count": 684,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 225,
    "id": "74b2bc27",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 226,
    "id": "54726299",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "Name: Employee Name, Length: 485, dtype: int64"
       ]
      },
-     "execution_count": 686,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 227,
    "id": "1c9f682a",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "257             293031.72  Wheatland School District  "
       ]
      },
-     "execution_count": 687,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 228,
    "id": "b7fec276",
    "metadata": {},
    "outputs": [],
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 229,
    "id": "93f5eaba",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "264             290868.77   Lincoln Unified  "
       ]
      },
-     "execution_count": 689,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 230,
    "id": "b7f53ded",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
        "382             252280.33         San Rafael City High  "
       ]
      },
-     "execution_count": 690,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 231,
    "id": "9ffd0566",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 232,
    "id": "7bfcc51a",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "477              226733.4  San Benito County Office of Education  "
       ]
      },
-     "execution_count": 692,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 233,
    "id": "008e899a",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 234,
    "id": "927f684a",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
        "Name: Employee Name, Length: 485, dtype: int64"
       ]
      },
-     "execution_count": 694,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 235,
    "id": "c848f3df",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1172,7 @@
        "(487, 7)"
       ]
      },
-     "execution_count": 695,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 236,
    "id": "de64fad1",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 237,
    "id": "8559ff67",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1221,7 @@
        "Name: Overtime Pay, dtype: int64"
       ]
      },
-     "execution_count": 697,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 238,
    "id": "fd34de5e",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 698,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 239,
    "id": "b3c14ed9",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 240,
    "id": "62ee85cb",
    "metadata": {},
    "outputs": [],
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 241,
    "id": "5432e8e4",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1304,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 701,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 242,
    "id": "e36f8c13",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 243,
    "id": "6809d740",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1447,7 @@
        "4     66560                518889  "
       ]
      },
-     "execution_count": 703,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 244,
    "id": "e13fb3d1",
    "metadata": {},
    "outputs": [],
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 245,
    "id": "b475b821",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1539,7 @@
        "2       Alameda  37.765206 -122.241636"
       ]
      },
-     "execution_count": 705,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 246,
    "id": "435c0586",
    "metadata": {},
    "outputs": [
@@ -1564,7 +1564,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 706,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 247,
    "id": "a917ea61",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1589,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 707,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 248,
    "id": "d9796ac9",
    "metadata": {},
    "outputs": [
@@ -1614,7 +1614,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 708,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 249,
    "id": "88088d7e",
    "metadata": {},
    "outputs": [],
@@ -1641,21 +1641,25 @@
     "choices = pd.Series(cities.Name)\n",
     "\n",
     "si_cities = []\n",
+    "latitudes = []\n",
+    "longitudes = []\n",
     "\n",
     "# String similarity\n",
     "for i, row in df.iterrows():\n",
     "    string = df.loc[i, 'Agency']\n",
-    "    choice = process.extract(string, choices, limit=3)\n",
-    "     \n",
-    "    si_cities.append(choice[0][0])\n",
-    "        \n",
+    "    choice = process.extract(string, choices, limit=1)\n",
+    "    \n",
+    "    city = choice[0][0]\n",
+    "    \n",
+    "    si_cities.append(city)\n",
+    "\n",
     "# Create new column called \n",
     "df['City'] = si_cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 250,
    "id": "2d6315f3",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1766,7 @@
        "[487 rows x 2 columns]"
       ]
      },
-     "execution_count": 710,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "id": "8434fef2",
    "metadata": {},
    "outputs": [],
@@ -1789,7 +1793,180 @@
    "metadata": {},
    "source": [
     "### Note: \n",
-    "Some Agency rows got matched poorly, so I had to verify and clean the data manually in the csv file — ended up saving it to a file called <b> cleaned-matched-cities</b> and went from <b> 488 rows</b> to <b> 335 rows </b> (~75% accuracy)."
+    "Some Agency rows got matched poorly, so I had to verify and clean the data manually in the csv file — ended up saving it to a file called <b> cleaned-matched-cities</b> and went from <b> 488 rows</b> to <b> 334 rows </b> (~75% accuracy)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "eead8f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import data \n",
+    "data = 'data/cleaned-si-cities.csv'\n",
+    "cleaned_si_cities = pd.read_csv(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "51c2b0e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Agency</th>\n",
+       "      <th>Base Pay</th>\n",
+       "      <th>Other Pay</th>\n",
+       "      <th>Overtime Pay</th>\n",
+       "      <th>Total Pay</th>\n",
+       "      <th>Benefits</th>\n",
+       "      <th>Total Pay &amp; Benefits</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ontario-Montclair</td>\n",
+       "      <td>355285</td>\n",
+       "      <td>197112</td>\n",
+       "      <td>0</td>\n",
+       "      <td>552397</td>\n",
+       "      <td>167573</td>\n",
+       "      <td>719970</td>\n",
+       "      <td>Montclair</td>\n",
+       "      <td>34.077511</td>\n",
+       "      <td>-117.689778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wheatland Union High</td>\n",
+       "      <td>233539</td>\n",
+       "      <td>10099</td>\n",
+       "      <td>0</td>\n",
+       "      <td>243639</td>\n",
+       "      <td>342424</td>\n",
+       "      <td>586063</td>\n",
+       "      <td>Wheatland</td>\n",
+       "      <td>39.009894</td>\n",
+       "      <td>-121.423014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Corona-Norco Unified</td>\n",
+       "      <td>398979</td>\n",
+       "      <td>57050</td>\n",
+       "      <td>0</td>\n",
+       "      <td>456029</td>\n",
+       "      <td>80208</td>\n",
+       "      <td>536238</td>\n",
+       "      <td>Corona</td>\n",
+       "      <td>33.875294</td>\n",
+       "      <td>-117.566439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Corona-Norco Unified</td>\n",
+       "      <td>252334</td>\n",
+       "      <td>39041</td>\n",
+       "      <td>0</td>\n",
+       "      <td>291375</td>\n",
+       "      <td>52337</td>\n",
+       "      <td>343713</td>\n",
+       "      <td>Corona</td>\n",
+       "      <td>33.875294</td>\n",
+       "      <td>-117.566439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>College of the Desert</td>\n",
+       "      <td>399006</td>\n",
+       "      <td>60457</td>\n",
+       "      <td>0</td>\n",
+       "      <td>459463</td>\n",
+       "      <td>66557</td>\n",
+       "      <td>526020</td>\n",
+       "      <td>Palm Desert</td>\n",
+       "      <td>33.722244</td>\n",
+       "      <td>-116.374456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Agency  Base Pay  Other Pay  Overtime Pay  Total Pay  \\\n",
+       "0      Ontario-Montclair    355285     197112             0     552397   \n",
+       "1   Wheatland Union High    233539      10099             0     243639   \n",
+       "2   Corona-Norco Unified    398979      57050             0     456029   \n",
+       "3   Corona-Norco Unified    252334      39041             0     291375   \n",
+       "4  College of the Desert    399006      60457             0     459463   \n",
+       "\n",
+       "   Benefits  Total Pay & Benefits         City   Latitude   Longitude  \n",
+       "0    167573                719970    Montclair  34.077511 -117.689778  \n",
+       "1    342424                586063    Wheatland  39.009894 -121.423014  \n",
+       "2     80208                536238       Corona  33.875294 -117.566439  \n",
+       "3     52337                343713       Corona  33.875294 -117.566439  \n",
+       "4     66557                526020  Palm Desert  33.722244 -116.374456  "
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge cities and cleaned_si_cities\n",
+    "final_si_data = cleaned_cities.merge(cities, left_on='City', right_on='Name')\n",
+    "\n",
+    "# Drop 'Name' column\n",
+    "final_si_data.drop('Name', axis=1, inplace=True)\n",
+    "\n",
+    "# Verify change\n",
+    "final_si_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "eed19599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to CSV\n",
+    "final_si_data.to_csv('data/final_si_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05382cc6",
+   "metadata": {},
+   "source": [
+    "### To see visualization, head over to: \n",
+    "https://public.tableau.com/app/profile/jordanlarot/viz/SuperintendentTotalPayBenefitsinCalifornia/TotalPayBenefits"
    ]
   }
  ],
